Practica3/generated/y.output
Estado 144 conflictos: 1 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: program $end

    1 program: header_program block

    2 block: start_block local_var_dec sub_progs sentences end_block
    3      | start_block local_var_dec sub_progs end_block

    4 sub_progs: sub_progs sub_prog
    5          | /* vacío */

    6 sub_prog: header_subprogram block

    7 local_var_dec: START_VAR_DEC local_var END_VAR_DEC
    8              | /* vacío */

    9 header_program: type MAIN PL PR

   10 start_block: BEGIN_P

   11 end_block: END

   12 local_var: local_var var_body
   13          | var_body

   14 var_body: type list_id SEMICOLON
   15         | error

   16 list_id: list_id COMMA ID
   17        | ID
   18        | error

   19 header_subprogram: type ID PL parameters PR
   20                  | type ID PL PR

   21 parameters: parameters COMMA type ID
   22           | type ID
   23           | error

   24 sentences: sentences sentence
   25          | sentence

   26 sentence: block
   27         | sentence_assign
   28         | sentence_if_then_else
   29         | sentence_while
   30         | sentence_input
   31         | sentence_output
   32         | sentence_return
   33         | sentence_do_until
   34         | sentence_list_forward_back
   35         | sentence_list_start_cursor
   36         | error

   37 sentence_assign: ID ASSIGN expr SEMICOLON

   38 sentence_if_then_else: IF PL expr PR sentence
   39                      | IF PL expr PR sentence ELSE sentence

   40 sentence_while: WHILE PL expr PR sentence

   41 sentence_input: INPUT CAD COMMA list_id SEMICOLON
   42               | INPUT list_id SEMICOLON

   43 sentence_output: OUTPUT list_expr_cad SEMICOLON

   44 sentence_return: RETURN expr SEMICOLON

   45 sentence_do_until: DO sentence UNTIL PL expr PR SEMICOLON

   46 sentence_list_forward_back: expr OP_LIST SEMICOLON

   47 sentence_list_start_cursor: OP_LIST_START_CURSOR expr SEMICOLON

   48 expr: PL expr PR
   49     | OP_UNIT expr
   50     | ID
   51     | const
   52     | function_call
   53     | expr OP_BIN expr
   54     | expr OP_PM expr
   55     | error

   56 function_call: ID PL list_expr PR
   57              | ID PL PR

   58 list_expr: list_expr COMMA expr
   59          | expr

   60 type: TYPE
   61     | LIST TYPE

   62 const: INT
   63      | FLOAT
   64      | CHAR
   65      | BOOL
   66      | const_list

   67 const_list: list_of_int
   68           | list_of_float
   69           | list_of_char
   70           | list_of_bool

   71 list_of_int: BEGIN_LIST list_int END_LIST

   72 list_int: list_int COMMA INT
   73         | INT

   74 list_of_float: BEGIN_LIST list_float END_LIST

   75 list_float: list_float COMMA FLOAT
   76           | FLOAT

   77 list_of_char: BEGIN_LIST list_char END_LIST

   78 list_char: list_char COMMA CHAR
   79          | CHAR

   80 list_of_bool: BEGIN_LIST list_bool END_LIST

   81 list_bool: list_bool COMMA BOOL
   82          | BOOL

   83 list_expr_cad: list_expr_cad COMMA expr_cad
   84              | expr_cad

   85 expr_cad: expr
   86         | CAD


Terminales con las reglas donde aparecen

$end (0) 0
error (256) 15 18 23 36 55
MAIN (258) 9
IF (259) 38 39
ELSE (260) 39
DO (261) 45
UNTIL (262) 45
OP_BIN (263) 53
OP_LIST (264) 46
OP_LIST_START_CURSOR (265) 47
OP_UNIT (266) 49
OP_PM (267) 54
TYPE (268) 60 61
BEGIN_LIST (269) 71 74 77 80
END_LIST (270) 71 74 77 80
ASSIGN (271) 37
PL (272) 9 19 20 38 39 40 45 48 56 57
PR (273) 9 19 20 38 39 40 45 48 56 57
BEGIN_P (274) 10
END (275) 11
COMMA (276) 16 21 41 58 72 75 78 81 83
SEMICOLON (277) 14 37 41 42 43 44 45 46 47
INPUT (278) 41 42
OUTPUT (279) 43
START_VAR_DEC (280) 7
END_VAR_DEC (281) 7
LIST (282) 61
ID (283) 16 17 19 20 21 22 37 50 56 57
BOOL (284) 65 81 82
RETURN (285) 44
WHILE (286) 40
INT (287) 62 72 73
FLOAT (288) 63 75 76
CHAR (289) 64 78 79
CAD (290) 41 86


No terminales con las reglas donde aparecen

$accept (36)
    en la izquierda: 0
program (37)
    en la izquierda: 1, en la derecha: 0
block (38)
    en la izquierda: 2 3, en la derecha: 1 6 26
sub_progs (39)
    en la izquierda: 4 5, en la derecha: 2 3 4
sub_prog (40)
    en la izquierda: 6, en la derecha: 4
local_var_dec (41)
    en la izquierda: 7 8, en la derecha: 2 3
header_program (42)
    en la izquierda: 9, en la derecha: 1
start_block (43)
    en la izquierda: 10, en la derecha: 2 3
end_block (44)
    en la izquierda: 11, en la derecha: 2 3
local_var (45)
    en la izquierda: 12 13, en la derecha: 7 12
var_body (46)
    en la izquierda: 14 15, en la derecha: 12 13
list_id (47)
    en la izquierda: 16 17 18, en la derecha: 14 16 41 42
header_subprogram (48)
    en la izquierda: 19 20, en la derecha: 6
parameters (49)
    en la izquierda: 21 22 23, en la derecha: 19 21
sentences (50)
    en la izquierda: 24 25, en la derecha: 2 24
sentence (51)
    en la izquierda: 26 27 28 29 30 31 32 33 34 35 36, en la derecha:
    24 25 38 39 40 45
sentence_assign (52)
    en la izquierda: 37, en la derecha: 27
sentence_if_then_else (53)
    en la izquierda: 38 39, en la derecha: 28
sentence_while (54)
    en la izquierda: 40, en la derecha: 29
sentence_input (55)
    en la izquierda: 41 42, en la derecha: 30
sentence_output (56)
    en la izquierda: 43, en la derecha: 31
sentence_return (57)
    en la izquierda: 44, en la derecha: 32
sentence_do_until (58)
    en la izquierda: 45, en la derecha: 33
sentence_list_forward_back (59)
    en la izquierda: 46, en la derecha: 34
sentence_list_start_cursor (60)
    en la izquierda: 47, en la derecha: 35
expr (61)
    en la izquierda: 48 49 50 51 52 53 54 55, en la derecha: 37 38
    39 40 44 45 46 47 48 49 53 54 58 59 85
function_call (62)
    en la izquierda: 56 57, en la derecha: 52
list_expr (63)
    en la izquierda: 58 59, en la derecha: 56 58
type (64)
    en la izquierda: 60 61, en la derecha: 9 14 19 20 21 22
const (65)
    en la izquierda: 62 63 64 65 66, en la derecha: 51
const_list (66)
    en la izquierda: 67 68 69 70, en la derecha: 66
list_of_int (67)
    en la izquierda: 71, en la derecha: 67
list_int (68)
    en la izquierda: 72 73, en la derecha: 71 72
list_of_float (69)
    en la izquierda: 74, en la derecha: 68
list_float (70)
    en la izquierda: 75 76, en la derecha: 74 75
list_of_char (71)
    en la izquierda: 77, en la derecha: 69
list_char (72)
    en la izquierda: 78 79, en la derecha: 77 78
list_of_bool (73)
    en la izquierda: 80, en la derecha: 70
list_bool (74)
    en la izquierda: 81 82, en la derecha: 80 81
list_expr_cad (75)
    en la izquierda: 83 84, en la derecha: 43 83
expr_cad (76)
    en la izquierda: 85 86, en la derecha: 83 84


State 0

    0 $accept: . program $end

    TYPE  desplazar e ir al estado 1
    LIST  desplazar e ir al estado 2

    program         ir al estado 3
    header_program  ir al estado 4
    type            ir al estado 5


State 1

   60 type: TYPE .

    $default  reduce usando la regla 60 (type)


State 2

   61 type: LIST . TYPE

    TYPE  desplazar e ir al estado 6


State 3

    0 $accept: program . $end

    $end  desplazar e ir al estado 7


State 4

    1 program: header_program . block

    BEGIN_P  desplazar e ir al estado 8

    block        ir al estado 9
    start_block  ir al estado 10


State 5

    9 header_program: type . MAIN PL PR

    MAIN  desplazar e ir al estado 11


State 6

   61 type: LIST TYPE .

    $default  reduce usando la regla 61 (type)


State 7

    0 $accept: program $end .

    $default  aceptar


State 8

   10 start_block: BEGIN_P .

    $default  reduce usando la regla 10 (start_block)


State 9

    1 program: header_program block .

    $default  reduce usando la regla 1 (program)


State 10

    2 block: start_block . local_var_dec sub_progs sentences end_block
    3      | start_block . local_var_dec sub_progs end_block

    START_VAR_DEC  desplazar e ir al estado 12

    $default  reduce usando la regla 8 (local_var_dec)

    local_var_dec  ir al estado 13


State 11

    9 header_program: type MAIN . PL PR

    PL  desplazar e ir al estado 14


State 12

    7 local_var_dec: START_VAR_DEC . local_var END_VAR_DEC

    error  desplazar e ir al estado 15
    TYPE   desplazar e ir al estado 1
    LIST   desplazar e ir al estado 2

    local_var  ir al estado 16
    var_body   ir al estado 17
    type       ir al estado 18


State 13

    2 block: start_block local_var_dec . sub_progs sentences end_block
    3      | start_block local_var_dec . sub_progs end_block

    $default  reduce usando la regla 5 (sub_progs)

    sub_progs  ir al estado 19


State 14

    9 header_program: type MAIN PL . PR

    PR  desplazar e ir al estado 20


State 15

   15 var_body: error .

    $default  reduce usando la regla 15 (var_body)


State 16

    7 local_var_dec: START_VAR_DEC local_var . END_VAR_DEC
   12 local_var: local_var . var_body

    error        desplazar e ir al estado 15
    TYPE         desplazar e ir al estado 1
    END_VAR_DEC  desplazar e ir al estado 21
    LIST         desplazar e ir al estado 2

    var_body  ir al estado 22
    type      ir al estado 18


State 17

   13 local_var: var_body .

    $default  reduce usando la regla 13 (local_var)


State 18

   14 var_body: type . list_id SEMICOLON

    error  desplazar e ir al estado 23
    ID     desplazar e ir al estado 24

    list_id  ir al estado 25


State 19

    2 block: start_block local_var_dec sub_progs . sentences end_block
    3      | start_block local_var_dec sub_progs . end_block
    4 sub_progs: sub_progs . sub_prog

    error                 desplazar e ir al estado 26
    IF                    desplazar e ir al estado 27
    DO                    desplazar e ir al estado 28
    OP_LIST_START_CURSOR  desplazar e ir al estado 29
    OP_UNIT               desplazar e ir al estado 30
    TYPE                  desplazar e ir al estado 1
    BEGIN_LIST            desplazar e ir al estado 31
    PL                    desplazar e ir al estado 32
    BEGIN_P               desplazar e ir al estado 8
    END                   desplazar e ir al estado 33
    INPUT                 desplazar e ir al estado 34
    OUTPUT                desplazar e ir al estado 35
    LIST                  desplazar e ir al estado 2
    ID                    desplazar e ir al estado 36
    BOOL                  desplazar e ir al estado 37
    RETURN                desplazar e ir al estado 38
    WHILE                 desplazar e ir al estado 39
    INT                   desplazar e ir al estado 40
    FLOAT                 desplazar e ir al estado 41
    CHAR                  desplazar e ir al estado 42

    block                       ir al estado 43
    sub_prog                    ir al estado 44
    start_block                 ir al estado 10
    end_block                   ir al estado 45
    header_subprogram           ir al estado 46
    sentences                   ir al estado 47
    sentence                    ir al estado 48
    sentence_assign             ir al estado 49
    sentence_if_then_else       ir al estado 50
    sentence_while              ir al estado 51
    sentence_input              ir al estado 52
    sentence_output             ir al estado 53
    sentence_return             ir al estado 54
    sentence_do_until           ir al estado 55
    sentence_list_forward_back  ir al estado 56
    sentence_list_start_cursor  ir al estado 57
    expr                        ir al estado 58
    function_call               ir al estado 59
    type                        ir al estado 60
    const                       ir al estado 61
    const_list                  ir al estado 62
    list_of_int                 ir al estado 63
    list_of_float               ir al estado 64
    list_of_char                ir al estado 65
    list_of_bool                ir al estado 66


State 20

    9 header_program: type MAIN PL PR .

    $default  reduce usando la regla 9 (header_program)


State 21

    7 local_var_dec: START_VAR_DEC local_var END_VAR_DEC .

    $default  reduce usando la regla 7 (local_var_dec)


State 22

   12 local_var: local_var var_body .

    $default  reduce usando la regla 12 (local_var)


State 23

   18 list_id: error .

    $default  reduce usando la regla 18 (list_id)


State 24

   17 list_id: ID .

    $default  reduce usando la regla 17 (list_id)


State 25

   14 var_body: type list_id . SEMICOLON
   16 list_id: list_id . COMMA ID

    COMMA      desplazar e ir al estado 67
    SEMICOLON  desplazar e ir al estado 68


State 26

   36 sentence: error .
   55 expr: error .

    OP_BIN    reduce usando la regla 55 (expr)
    OP_LIST   reduce usando la regla 55 (expr)
    OP_PM     reduce usando la regla 55 (expr)
    $default  reduce usando la regla 36 (sentence)


State 27

   38 sentence_if_then_else: IF . PL expr PR sentence
   39                      | IF . PL expr PR sentence ELSE sentence

    PL  desplazar e ir al estado 69


State 28

   45 sentence_do_until: DO . sentence UNTIL PL expr PR SEMICOLON

    error                 desplazar e ir al estado 26
    IF                    desplazar e ir al estado 27
    DO                    desplazar e ir al estado 28
    OP_LIST_START_CURSOR  desplazar e ir al estado 29
    OP_UNIT               desplazar e ir al estado 30
    BEGIN_LIST            desplazar e ir al estado 31
    PL                    desplazar e ir al estado 32
    BEGIN_P               desplazar e ir al estado 8
    INPUT                 desplazar e ir al estado 34
    OUTPUT                desplazar e ir al estado 35
    ID                    desplazar e ir al estado 36
    BOOL                  desplazar e ir al estado 37
    RETURN                desplazar e ir al estado 38
    WHILE                 desplazar e ir al estado 39
    INT                   desplazar e ir al estado 40
    FLOAT                 desplazar e ir al estado 41
    CHAR                  desplazar e ir al estado 42

    block                       ir al estado 43
    start_block                 ir al estado 10
    sentence                    ir al estado 70
    sentence_assign             ir al estado 49
    sentence_if_then_else       ir al estado 50
    sentence_while              ir al estado 51
    sentence_input              ir al estado 52
    sentence_output             ir al estado 53
    sentence_return             ir al estado 54
    sentence_do_until           ir al estado 55
    sentence_list_forward_back  ir al estado 56
    sentence_list_start_cursor  ir al estado 57
    expr                        ir al estado 58
    function_call               ir al estado 59
    const                       ir al estado 61
    const_list                  ir al estado 62
    list_of_int                 ir al estado 63
    list_of_float               ir al estado 64
    list_of_char                ir al estado 65
    list_of_bool                ir al estado 66


State 29

   47 sentence_list_start_cursor: OP_LIST_START_CURSOR . expr SEMICOLON

    error       desplazar e ir al estado 71
    OP_UNIT     desplazar e ir al estado 30
    BEGIN_LIST  desplazar e ir al estado 31
    PL          desplazar e ir al estado 32
    ID          desplazar e ir al estado 72
    BOOL        desplazar e ir al estado 37
    INT         desplazar e ir al estado 40
    FLOAT       desplazar e ir al estado 41
    CHAR        desplazar e ir al estado 42

    expr           ir al estado 73
    function_call  ir al estado 59
    const          ir al estado 61
    const_list     ir al estado 62
    list_of_int    ir al estado 63
    list_of_float  ir al estado 64
    list_of_char   ir al estado 65
    list_of_bool   ir al estado 66


State 30

   49 expr: OP_UNIT . expr

    error       desplazar e ir al estado 71
    OP_UNIT     desplazar e ir al estado 30
    BEGIN_LIST  desplazar e ir al estado 31
    PL          desplazar e ir al estado 32
    ID          desplazar e ir al estado 72
    BOOL        desplazar e ir al estado 37
    INT         desplazar e ir al estado 40
    FLOAT       desplazar e ir al estado 41
    CHAR        desplazar e ir al estado 42

    expr           ir al estado 74
    function_call  ir al estado 59
    const          ir al estado 61
    const_list     ir al estado 62
    list_of_int    ir al estado 63
    list_of_float  ir al estado 64
    list_of_char   ir al estado 65
    list_of_bool   ir al estado 66


State 31

   71 list_of_int: BEGIN_LIST . list_int END_LIST
   74 list_of_float: BEGIN_LIST . list_float END_LIST
   77 list_of_char: BEGIN_LIST . list_char END_LIST
   80 list_of_bool: BEGIN_LIST . list_bool END_LIST

    BOOL   desplazar e ir al estado 75
    INT    desplazar e ir al estado 76
    FLOAT  desplazar e ir al estado 77
    CHAR   desplazar e ir al estado 78

    list_int    ir al estado 79
    list_float  ir al estado 80
    list_char   ir al estado 81
    list_bool   ir al estado 82


State 32

   48 expr: PL . expr PR

    error       desplazar e ir al estado 71
    OP_UNIT     desplazar e ir al estado 30
    BEGIN_LIST  desplazar e ir al estado 31
    PL          desplazar e ir al estado 32
    ID          desplazar e ir al estado 72
    BOOL        desplazar e ir al estado 37
    INT         desplazar e ir al estado 40
    FLOAT       desplazar e ir al estado 41
    CHAR        desplazar e ir al estado 42

    expr           ir al estado 83
    function_call  ir al estado 59
    const          ir al estado 61
    const_list     ir al estado 62
    list_of_int    ir al estado 63
    list_of_float  ir al estado 64
    list_of_char   ir al estado 65
    list_of_bool   ir al estado 66


State 33

   11 end_block: END .

    $default  reduce usando la regla 11 (end_block)


State 34

   41 sentence_input: INPUT . CAD COMMA list_id SEMICOLON
   42               | INPUT . list_id SEMICOLON

    error  desplazar e ir al estado 23
    ID     desplazar e ir al estado 24
    CAD    desplazar e ir al estado 84

    list_id  ir al estado 85


State 35

   43 sentence_output: OUTPUT . list_expr_cad SEMICOLON

    error       desplazar e ir al estado 71
    OP_UNIT     desplazar e ir al estado 30
    BEGIN_LIST  desplazar e ir al estado 31
    PL          desplazar e ir al estado 32
    ID          desplazar e ir al estado 72
    BOOL        desplazar e ir al estado 37
    INT         desplazar e ir al estado 40
    FLOAT       desplazar e ir al estado 41
    CHAR        desplazar e ir al estado 42
    CAD         desplazar e ir al estado 86

    expr           ir al estado 87
    function_call  ir al estado 59
    const          ir al estado 61
    const_list     ir al estado 62
    list_of_int    ir al estado 63
    list_of_float  ir al estado 64
    list_of_char   ir al estado 65
    list_of_bool   ir al estado 66
    list_expr_cad  ir al estado 88
    expr_cad       ir al estado 89


State 36

   37 sentence_assign: ID . ASSIGN expr SEMICOLON
   50 expr: ID .
   56 function_call: ID . PL list_expr PR
   57              | ID . PL PR

    ASSIGN  desplazar e ir al estado 90
    PL      desplazar e ir al estado 91

    $default  reduce usando la regla 50 (expr)


State 37

   65 const: BOOL .

    $default  reduce usando la regla 65 (const)


State 38

   44 sentence_return: RETURN . expr SEMICOLON

    error       desplazar e ir al estado 71
    OP_UNIT     desplazar e ir al estado 30
    BEGIN_LIST  desplazar e ir al estado 31
    PL          desplazar e ir al estado 32
    ID          desplazar e ir al estado 72
    BOOL        desplazar e ir al estado 37
    INT         desplazar e ir al estado 40
    FLOAT       desplazar e ir al estado 41
    CHAR        desplazar e ir al estado 42

    expr           ir al estado 92
    function_call  ir al estado 59
    const          ir al estado 61
    const_list     ir al estado 62
    list_of_int    ir al estado 63
    list_of_float  ir al estado 64
    list_of_char   ir al estado 65
    list_of_bool   ir al estado 66


State 39

   40 sentence_while: WHILE . PL expr PR sentence

    PL  desplazar e ir al estado 93


State 40

   62 const: INT .

    $default  reduce usando la regla 62 (const)


State 41

   63 const: FLOAT .

    $default  reduce usando la regla 63 (const)


State 42

   64 const: CHAR .

    $default  reduce usando la regla 64 (const)


State 43

   26 sentence: block .

    $default  reduce usando la regla 26 (sentence)


State 44

    4 sub_progs: sub_progs sub_prog .

    $default  reduce usando la regla 4 (sub_progs)


State 45

    3 block: start_block local_var_dec sub_progs end_block .

    $default  reduce usando la regla 3 (block)


State 46

    6 sub_prog: header_subprogram . block

    BEGIN_P  desplazar e ir al estado 8

    block        ir al estado 94
    start_block  ir al estado 10


State 47

    2 block: start_block local_var_dec sub_progs sentences . end_block
   24 sentences: sentences . sentence

    error                 desplazar e ir al estado 26
    IF                    desplazar e ir al estado 27
    DO                    desplazar e ir al estado 28
    OP_LIST_START_CURSOR  desplazar e ir al estado 29
    OP_UNIT               desplazar e ir al estado 30
    BEGIN_LIST            desplazar e ir al estado 31
    PL                    desplazar e ir al estado 32
    BEGIN_P               desplazar e ir al estado 8
    END                   desplazar e ir al estado 33
    INPUT                 desplazar e ir al estado 34
    OUTPUT                desplazar e ir al estado 35
    ID                    desplazar e ir al estado 36
    BOOL                  desplazar e ir al estado 37
    RETURN                desplazar e ir al estado 38
    WHILE                 desplazar e ir al estado 39
    INT                   desplazar e ir al estado 40
    FLOAT                 desplazar e ir al estado 41
    CHAR                  desplazar e ir al estado 42

    block                       ir al estado 43
    start_block                 ir al estado 10
    end_block                   ir al estado 95
    sentence                    ir al estado 96
    sentence_assign             ir al estado 49
    sentence_if_then_else       ir al estado 50
    sentence_while              ir al estado 51
    sentence_input              ir al estado 52
    sentence_output             ir al estado 53
    sentence_return             ir al estado 54
    sentence_do_until           ir al estado 55
    sentence_list_forward_back  ir al estado 56
    sentence_list_start_cursor  ir al estado 57
    expr                        ir al estado 58
    function_call               ir al estado 59
    const                       ir al estado 61
    const_list                  ir al estado 62
    list_of_int                 ir al estado 63
    list_of_float               ir al estado 64
    list_of_char                ir al estado 65
    list_of_bool                ir al estado 66


State 48

   25 sentences: sentence .

    $default  reduce usando la regla 25 (sentences)


State 49

   27 sentence: sentence_assign .

    $default  reduce usando la regla 27 (sentence)


State 50

   28 sentence: sentence_if_then_else .

    $default  reduce usando la regla 28 (sentence)


State 51

   29 sentence: sentence_while .

    $default  reduce usando la regla 29 (sentence)


State 52

   30 sentence: sentence_input .

    $default  reduce usando la regla 30 (sentence)


State 53

   31 sentence: sentence_output .

    $default  reduce usando la regla 31 (sentence)


State 54

   32 sentence: sentence_return .

    $default  reduce usando la regla 32 (sentence)


State 55

   33 sentence: sentence_do_until .

    $default  reduce usando la regla 33 (sentence)


State 56

   34 sentence: sentence_list_forward_back .

    $default  reduce usando la regla 34 (sentence)


State 57

   35 sentence: sentence_list_start_cursor .

    $default  reduce usando la regla 35 (sentence)


State 58

   46 sentence_list_forward_back: expr . OP_LIST SEMICOLON
   53 expr: expr . OP_BIN expr
   54     | expr . OP_PM expr

    OP_BIN   desplazar e ir al estado 97
    OP_LIST  desplazar e ir al estado 98
    OP_PM    desplazar e ir al estado 99


State 59

   52 expr: function_call .

    $default  reduce usando la regla 52 (expr)


State 60

   19 header_subprogram: type . ID PL parameters PR
   20                  | type . ID PL PR

    ID  desplazar e ir al estado 100


State 61

   51 expr: const .

    $default  reduce usando la regla 51 (expr)


State 62

   66 const: const_list .

    $default  reduce usando la regla 66 (const)


State 63

   67 const_list: list_of_int .

    $default  reduce usando la regla 67 (const_list)


State 64

   68 const_list: list_of_float .

    $default  reduce usando la regla 68 (const_list)


State 65

   69 const_list: list_of_char .

    $default  reduce usando la regla 69 (const_list)


State 66

   70 const_list: list_of_bool .

    $default  reduce usando la regla 70 (const_list)


State 67

   16 list_id: list_id COMMA . ID

    ID  desplazar e ir al estado 101


State 68

   14 var_body: type list_id SEMICOLON .

    $default  reduce usando la regla 14 (var_body)


State 69

   38 sentence_if_then_else: IF PL . expr PR sentence
   39                      | IF PL . expr PR sentence ELSE sentence

    error       desplazar e ir al estado 71
    OP_UNIT     desplazar e ir al estado 30
    BEGIN_LIST  desplazar e ir al estado 31
    PL          desplazar e ir al estado 32
    ID          desplazar e ir al estado 72
    BOOL        desplazar e ir al estado 37
    INT         desplazar e ir al estado 40
    FLOAT       desplazar e ir al estado 41
    CHAR        desplazar e ir al estado 42

    expr           ir al estado 102
    function_call  ir al estado 59
    const          ir al estado 61
    const_list     ir al estado 62
    list_of_int    ir al estado 63
    list_of_float  ir al estado 64
    list_of_char   ir al estado 65
    list_of_bool   ir al estado 66


State 70

   45 sentence_do_until: DO sentence . UNTIL PL expr PR SEMICOLON

    UNTIL  desplazar e ir al estado 103


State 71

   55 expr: error .

    $default  reduce usando la regla 55 (expr)


State 72

   50 expr: ID .
   56 function_call: ID . PL list_expr PR
   57              | ID . PL PR

    PL  desplazar e ir al estado 91

    $default  reduce usando la regla 50 (expr)


State 73

   47 sentence_list_start_cursor: OP_LIST_START_CURSOR expr . SEMICOLON
   53 expr: expr . OP_BIN expr
   54     | expr . OP_PM expr

    OP_BIN     desplazar e ir al estado 97
    OP_PM      desplazar e ir al estado 99
    SEMICOLON  desplazar e ir al estado 104


State 74

   49 expr: OP_UNIT expr .
   53     | expr . OP_BIN expr
   54     | expr . OP_PM expr

    OP_PM  desplazar e ir al estado 99

    $default  reduce usando la regla 49 (expr)


State 75

   82 list_bool: BOOL .

    $default  reduce usando la regla 82 (list_bool)


State 76

   73 list_int: INT .

    $default  reduce usando la regla 73 (list_int)


State 77

   76 list_float: FLOAT .

    $default  reduce usando la regla 76 (list_float)


State 78

   79 list_char: CHAR .

    $default  reduce usando la regla 79 (list_char)


State 79

   71 list_of_int: BEGIN_LIST list_int . END_LIST
   72 list_int: list_int . COMMA INT

    END_LIST  desplazar e ir al estado 105
    COMMA     desplazar e ir al estado 106


State 80

   74 list_of_float: BEGIN_LIST list_float . END_LIST
   75 list_float: list_float . COMMA FLOAT

    END_LIST  desplazar e ir al estado 107
    COMMA     desplazar e ir al estado 108


State 81

   77 list_of_char: BEGIN_LIST list_char . END_LIST
   78 list_char: list_char . COMMA CHAR

    END_LIST  desplazar e ir al estado 109
    COMMA     desplazar e ir al estado 110


State 82

   80 list_of_bool: BEGIN_LIST list_bool . END_LIST
   81 list_bool: list_bool . COMMA BOOL

    END_LIST  desplazar e ir al estado 111
    COMMA     desplazar e ir al estado 112


State 83

   48 expr: PL expr . PR
   53     | expr . OP_BIN expr
   54     | expr . OP_PM expr

    OP_BIN  desplazar e ir al estado 97
    OP_PM   desplazar e ir al estado 99
    PR      desplazar e ir al estado 113


State 84

   41 sentence_input: INPUT CAD . COMMA list_id SEMICOLON

    COMMA  desplazar e ir al estado 114


State 85

   16 list_id: list_id . COMMA ID
   42 sentence_input: INPUT list_id . SEMICOLON

    COMMA      desplazar e ir al estado 67
    SEMICOLON  desplazar e ir al estado 115


State 86

   86 expr_cad: CAD .

    $default  reduce usando la regla 86 (expr_cad)


State 87

   53 expr: expr . OP_BIN expr
   54     | expr . OP_PM expr
   85 expr_cad: expr .

    OP_BIN  desplazar e ir al estado 97
    OP_PM   desplazar e ir al estado 99

    $default  reduce usando la regla 85 (expr_cad)


State 88

   43 sentence_output: OUTPUT list_expr_cad . SEMICOLON
   83 list_expr_cad: list_expr_cad . COMMA expr_cad

    COMMA      desplazar e ir al estado 116
    SEMICOLON  desplazar e ir al estado 117


State 89

   84 list_expr_cad: expr_cad .

    $default  reduce usando la regla 84 (list_expr_cad)


State 90

   37 sentence_assign: ID ASSIGN . expr SEMICOLON

    error       desplazar e ir al estado 71
    OP_UNIT     desplazar e ir al estado 30
    BEGIN_LIST  desplazar e ir al estado 31
    PL          desplazar e ir al estado 32
    ID          desplazar e ir al estado 72
    BOOL        desplazar e ir al estado 37
    INT         desplazar e ir al estado 40
    FLOAT       desplazar e ir al estado 41
    CHAR        desplazar e ir al estado 42

    expr           ir al estado 118
    function_call  ir al estado 59
    const          ir al estado 61
    const_list     ir al estado 62
    list_of_int    ir al estado 63
    list_of_float  ir al estado 64
    list_of_char   ir al estado 65
    list_of_bool   ir al estado 66


State 91

   56 function_call: ID PL . list_expr PR
   57              | ID PL . PR

    error       desplazar e ir al estado 71
    OP_UNIT     desplazar e ir al estado 30
    BEGIN_LIST  desplazar e ir al estado 31
    PL          desplazar e ir al estado 32
    PR          desplazar e ir al estado 119
    ID          desplazar e ir al estado 72
    BOOL        desplazar e ir al estado 37
    INT         desplazar e ir al estado 40
    FLOAT       desplazar e ir al estado 41
    CHAR        desplazar e ir al estado 42

    expr           ir al estado 120
    function_call  ir al estado 59
    list_expr      ir al estado 121
    const          ir al estado 61
    const_list     ir al estado 62
    list_of_int    ir al estado 63
    list_of_float  ir al estado 64
    list_of_char   ir al estado 65
    list_of_bool   ir al estado 66


State 92

   44 sentence_return: RETURN expr . SEMICOLON
   53 expr: expr . OP_BIN expr
   54     | expr . OP_PM expr

    OP_BIN     desplazar e ir al estado 97
    OP_PM      desplazar e ir al estado 99
    SEMICOLON  desplazar e ir al estado 122


State 93

   40 sentence_while: WHILE PL . expr PR sentence

    error       desplazar e ir al estado 71
    OP_UNIT     desplazar e ir al estado 30
    BEGIN_LIST  desplazar e ir al estado 31
    PL          desplazar e ir al estado 32
    ID          desplazar e ir al estado 72
    BOOL        desplazar e ir al estado 37
    INT         desplazar e ir al estado 40
    FLOAT       desplazar e ir al estado 41
    CHAR        desplazar e ir al estado 42

    expr           ir al estado 123
    function_call  ir al estado 59
    const          ir al estado 61
    const_list     ir al estado 62
    list_of_int    ir al estado 63
    list_of_float  ir al estado 64
    list_of_char   ir al estado 65
    list_of_bool   ir al estado 66


State 94

    6 sub_prog: header_subprogram block .

    $default  reduce usando la regla 6 (sub_prog)


State 95

    2 block: start_block local_var_dec sub_progs sentences end_block .

    $default  reduce usando la regla 2 (block)


State 96

   24 sentences: sentences sentence .

    $default  reduce usando la regla 24 (sentences)


State 97

   53 expr: expr OP_BIN . expr

    error       desplazar e ir al estado 71
    OP_UNIT     desplazar e ir al estado 30
    BEGIN_LIST  desplazar e ir al estado 31
    PL          desplazar e ir al estado 32
    ID          desplazar e ir al estado 72
    BOOL        desplazar e ir al estado 37
    INT         desplazar e ir al estado 40
    FLOAT       desplazar e ir al estado 41
    CHAR        desplazar e ir al estado 42

    expr           ir al estado 124
    function_call  ir al estado 59
    const          ir al estado 61
    const_list     ir al estado 62
    list_of_int    ir al estado 63
    list_of_float  ir al estado 64
    list_of_char   ir al estado 65
    list_of_bool   ir al estado 66


State 98

   46 sentence_list_forward_back: expr OP_LIST . SEMICOLON

    SEMICOLON  desplazar e ir al estado 125


State 99

   54 expr: expr OP_PM . expr

    error       desplazar e ir al estado 71
    OP_UNIT     desplazar e ir al estado 30
    BEGIN_LIST  desplazar e ir al estado 31
    PL          desplazar e ir al estado 32
    ID          desplazar e ir al estado 72
    BOOL        desplazar e ir al estado 37
    INT         desplazar e ir al estado 40
    FLOAT       desplazar e ir al estado 41
    CHAR        desplazar e ir al estado 42

    expr           ir al estado 126
    function_call  ir al estado 59
    const          ir al estado 61
    const_list     ir al estado 62
    list_of_int    ir al estado 63
    list_of_float  ir al estado 64
    list_of_char   ir al estado 65
    list_of_bool   ir al estado 66


State 100

   19 header_subprogram: type ID . PL parameters PR
   20                  | type ID . PL PR

    PL  desplazar e ir al estado 127


State 101

   16 list_id: list_id COMMA ID .

    $default  reduce usando la regla 16 (list_id)


State 102

   38 sentence_if_then_else: IF PL expr . PR sentence
   39                      | IF PL expr . PR sentence ELSE sentence
   53 expr: expr . OP_BIN expr
   54     | expr . OP_PM expr

    OP_BIN  desplazar e ir al estado 97
    OP_PM   desplazar e ir al estado 99
    PR      desplazar e ir al estado 128


State 103

   45 sentence_do_until: DO sentence UNTIL . PL expr PR SEMICOLON

    PL  desplazar e ir al estado 129


State 104

   47 sentence_list_start_cursor: OP_LIST_START_CURSOR expr SEMICOLON .

    $default  reduce usando la regla 47 (sentence_list_start_cursor)


State 105

   71 list_of_int: BEGIN_LIST list_int END_LIST .

    $default  reduce usando la regla 71 (list_of_int)


State 106

   72 list_int: list_int COMMA . INT

    INT  desplazar e ir al estado 130


State 107

   74 list_of_float: BEGIN_LIST list_float END_LIST .

    $default  reduce usando la regla 74 (list_of_float)


State 108

   75 list_float: list_float COMMA . FLOAT

    FLOAT  desplazar e ir al estado 131

